draw home popup completed

--- a/apps/renovation/src/index.html
+++ b/apps/renovation/src/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
   <link href="./assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="./assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
@@ -31,9 +31,11 @@
   <link href="./assets/css/9e13ee8.css" rel="stylesheet">
   <link href="./assets/css/45d1782.css" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body>
+<body class="mat-typography">
 <tvs-root></tvs-root>
   
 
