general part of tradesmen is done

--- a/apps/renovation/src/index.html
+++ b/apps/renovation/src/index.html
@@ -9,6 +9,7 @@
   <title>TVS Renovation</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Favicons -->
   <link href="./assets/images/favicon.png" rel="icon">
